--- a/RPS_Game/app/src/main/res/layout/activity_main.xml
+++ b/RPS_Game/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:padding="2dp" />
 
         <TextView
-            android:id="@+id/textViewResult"
+            android:id="@+id/textResult"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:fadeScrollbars="false"
