--- a/RPS_Game/app/src/main/res/layout/activity_result.xml
+++ b/RPS_Game/app/src/main/res/layout/activity_result.xml
@@ -4,42 +4,128 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Result">
+    android:background="@drawable/bg_login"
+    tools:context="com.RPS_Game.tflite.Result">
 
-    <Button
-        android:id="@+id/goLobi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
-        android:layout_marginLeft="49dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="564dp"
-        android:text="Lobiye Dön"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goMain" />
 
     <Button
         android:id="@+id/goMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="101dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginBottom="51dp"
+        android:background="@drawable/btn_bg"
         android:text="Yeniden Oyna"
-        tools:layout_editor_absoluteX="49dp"
-        tools:layout_editor_absoluteY="54dp" />
+        android:textAllCaps="false"
+        android:textColor="#F5F7F8"
+        android:textColorHint="#00F8F7F7"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.236"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewRandom" />
+
+    <Button
+        android:id="@+id/goLobi"
+        android:layout_width="107dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginBottom="51dp"
+        android:background="@drawable/btn_bg"
+        android:text="Lobiye Dön"
+        android:textAllCaps="false"
+        android:textColor="#F5F7F8"
+        android:textColorHint="#00F8F7F7"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.759"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewRandom"
+        app:layout_constraintVertical_bias="0.492" />
+
+    <TextView
+        android:id="@+id/randomMoveText"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:text="Bilgisayar Hamlesi"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.524" />
+
+    <TextView
+        android:id="@+id/userMoveText"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginRight="90dp"
+        android:layout_marginBottom="19dp"
+        android:text="Kullanıcı Hamlesi"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/imageViewUser"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.833" />
+
+    <ImageView
+        android:id="@+id/imageViewUser"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginRight="135dp"
+        app:layout_constraintBottom_toTopOf="@+id/textResult"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.804" />
 
     <TextView
         android:id="@+id/textResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="53dp"
-        android:layout_marginLeft="53dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="299dp"
-        android:layout_marginRight="299dp"
-        android:layout_marginBottom="519dp"
-        android:text="TextView"
+        android:layout_width="149dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginRight="75dp"
+        android:text="   SONUÇ"
+        android:textColor="#FBC02D"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goLobi" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.464" />
+
+    <ImageView
+        android:id="@+id/imageViewRandom"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="145dp"
+        android:layout_marginLeft="145dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginRight="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.824" />
 </android.support.constraint.ConstraintLayout>
