--- a/RPS_Game/app/src/main/res/layout/item_user_recycler.xml
+++ b/RPS_Game/app/src/main/res/layout/item_user_recycler.xml
@@ -16,7 +16,7 @@
         tools:ignore="MissingConstraints">
 
         <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/textViewName"
+            android:id="@+id/randomMove"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
